# Cpp_Suitor_and_Local_Dominant_Matching

./: .gitignore  CMakeLists.txt  LICENSE  README.md
evaluation/: .Rhistory  notes.txt
evaluation/3.2/: SeqDomi.txt  SeqDomi_2.txt  SeqDomi_3.txt  SeqSuitor.txt  SeqSuitor_3.txt  plot.R
evaluation/3.3/: ParDomi.txt  ParFreeSuitorBad.txt  ParFreeSuitorGood.txt  ParSuitor.txt  SeqDomi.txt  SeqSuitor.txt  plot.R
evaluation/3.4_3.5/: ParDomi.txt  ParFreeSuitor.txt  ParSuitor.txt  SeqSuitor.txt  plot.R
implementation/: edge_list2.hpp  graph2_adj_array.hpp  graph_adj_array.hpp  local_queue.hpp  parallel_dominant.hpp  parallel_free_suitor.hpp  parallel_suitor.hpp  sequential_dominant.hpp  sequential_suitor.hpp
source/: parallel_dominant.cpp  parallel_free_suitor.cpp  parallel_suitor.cpp  sequential_dominant.cpp  sequential_suitor.cpp
tools/: trans_file.cpp
